--- a/Java/多线程.md
+++ b/Java/多线程.md
@@ -4,15 +4,15 @@
 
 ##### 1.1 并发和并行
 
-> ![并发和并行](/home/exile/project/Notes/Java/img/并发和并行.png)
+> ![并发和并行](./img/并发和并行.png)
 
 ##### 1.2 进程的概念
 
-> ![进程的概念](/home/exile/project/Notes/Java/img/进程的概念.png)
+> ![进程的概念](./img/进程的概念.png)
 
 ##### 1.3 多线程
 
-> ![线程](/home/exile/project/Notes/Java/img/线程.png)
+> ![线程](./img/线程.png)
 
 ##### 1.4 线程调度
 
@@ -26,7 +26,7 @@
 
 ##### 1.5 主线程
 
-> ![主线程](/home/exile/project/Notes/Java/img/主线程.png)
+> ![主线程](./img/主线程.png)
 
 #### 2. 创建多线程的方式
 
@@ -42,11 +42,11 @@
 
 ###### 1.1.2 多线程原理
 
-> ![多线程原理](/home/exile/project/Notes/Java/img/多线程原理.png)
+> ![多线程原理](./img/多线程原理.png)
 
 ###### 1.1.3 多线程在内存中的表示
 
-> ![多线程在内存中的表示](/home/exile/project/Notes/Java/img/多线程在内存中的表示.png)
+> ![多线程在内存中的表示](./img/多线程在内存中的表示.png)
 
 ###### 1.1.4 一些常用方法
 
@@ -57,7 +57,7 @@
 > - `String toString()`返回该线程的字符串表示形式，包括线程名称、优先级和线程组
 > - `static void yield()`暂停当前正在执行的线程对象，并执行其他线程
 >
-> ![多线程的一些常用方法](/home/exile/project/Notes/Java/img/线程的一些常用方法.png)
+> ![多线程的一些常用方法](./img/线程的一些常用方法.png)
 
 ##### 1.2 第二种方式
 
