--- a/Java/异常处理.md
+++ b/Java/异常处理.md
@@ -23,7 +23,7 @@
 >
 > `Objects.requireNonNull(obj)`，该方法的源码。
 >
-> ![Objects.requireNonNull](/home/exile/project/Notes/Java/img/Objects.png)
+> ![Objects.requireNonNull](./img/Objects.png)
 >
 > 例如
 >
@@ -57,7 +57,7 @@
 >
 > - 例子
 >
-> ![ThrowsDemo](/home/exile/project/Notes/Java/img/ThrowsDemo.png)
+> ![ThrowsDemo](./img/ThrowsDemo.png)
 
 #### 4. try...catch...
 
@@ -79,12 +79,16 @@
 > > 3. void printStackTrace() JVM打印就是使用了该方法，信息是最多的。
 >
 > - 例如
->   ![TryCatchDemo](/home/exile/project/Notes/Java/img/TryCatchDemo.png) 
+>   ![TryCatchDemo](./img/TryCatchDemo.png) 
 >
 > 结果是　
 >
-> ![TryDemoResult](/home/exile/project/Notes/Java/img/TryDemoResult.png)
+> ![TryDemoResult](./img/TryDemoResult.png)
 
 #### 5. finally
 
-> 无论是否发生异常都会执行的代码块，不能单独使用，只能和try...catch搭配使用
+> - 无论是否发生异常都会执行的代码块，不能单独使用，只能和try...catch搭配使用
+>
+> - 如果在try或者catch中使用return，那么会在他们return之前执行该语句块。如果该语句块中也有return，那么try和catch中的return 将被覆盖
+> - 如果try或catch中发生异常，那么也会先执行该语句块
+> - 如果在try或catch中使用了System.exit()，那么该语句块不会被执行。
