解决图片路径不正确，导致图片不能正常加载的问题

--- a/Linux/软件安装/桌面便签的安装.md
+++ b/Linux/软件安装/桌面便签的安装.md
@@ -12,7 +12,7 @@
 >
 > 我看网上的教程是用上面这三条命令，但是我在使用第一条命令时出错了
 >
-> ![增加stickynotes仓库出错](/home/exile/project/Notes/Linux/软件安装/img/notesError.png)
+> ![增加stickynotes仓库出错](./img/notesError.png)
 >
 > 然后我索性直接跳过前两个部分，用第三个命令，但是又报错了。
 >
@@ -20,6 +20,6 @@
 >
 > ` sudo apt --fix-broken install indicator-stickynotes`
 >
-> ![stickynotes安装成功](/home/exile/project/Notes/Linux/软件安装/img/notesOk.png)
+> ![stickynotes安装成功](./img/notesOk.png)
 >
 > 安装成功，在所有程序里可以找到。应用默认颜色是黄色，但是可以修改的。
