--- a/Linux/软件安装/网易云音乐的安装.md
+++ b/Linux/软件安装/网易云音乐的安装.md
@@ -4,7 +4,7 @@
 
 > 去网易云音乐的网管下载Linux的deb包。如下图
 >
-> ![网易云音乐下载](/home/exile/project/Notes/Linux/软件安装/img/netEasy.png)
+> ![网易云音乐下载](./img/netEasy.png)
 
 ### 2. 开始安装
 
