--- a/Linux/软件安装/搜狗输入法的安装.md
+++ b/Linux/软件安装/搜狗输入法的安装.md
@@ -16,11 +16,11 @@
 
      不过我的出现了一点问题，如下图
 
-     ![安装包出错](/home/exile/project/Notes/Linux/软件安装/img/dpkg_sogou_error.png)
+     ![安装包出错](./img/dpkg_sogou_error.png)
 
    - 然后我根据错误提示安装那些软件包，安装命令`sudo apt install 软件包名`,
 
-     安装过程又出现了一个问题，如下，然后执行`sudo apt --fix-broken install`![安装依赖包出错](/home/exile/project/Notes/Linux/软件安装/img/install_sogou_packege_error.png)
+     安装过程又出现了一个问题，如下，然后执行`sudo apt --fix-broken install`![安装依赖包出错](./img/install_sogou_packege_error.png)
 
    - 完成之后，执行
 
@@ -32,6 +32,6 @@
 
      键盘输入法系统选择fcitx
 
-     ![键盘输入法系统选择fcitx](/home/exile/project/Notes/Linux/软件安装/img/select_fcitx.png)
+     ![键盘输入法系统选择fcitx](./img/select_fcitx.png)
 
      最后重启就可以了。
