增加笔记：SQL介绍和数据库的控制功能

--- a/ruankao/数据库技术.md
+++ b/ruankao/数据库技术.md
@@ -157,4 +157,286 @@ DBMS的6个功能
 
    全外连接。左外+右外
 
- 
+ ## 4. 关系数据库SQL介绍
+
+SQL语言功能极强，完成核心功能只用了9个动词，包括以下四类
+
+1. 数据查询：SELECT
+2. 数据定义：CREATE、DROP、ALTER
+3. 数据操纵：INSERT、UPDATE、DELETE
+4. 数据控制：GRANT、REVOKE
+
+SQL语言支持关系数据的三级模式结构
+
+试图对应外模式、基本表对应模式、存储文件对应内模式
+
+### 4.1 SQL的基本组成
+
+1. 数据定义语言。DDL提供定义关系模式和视图、删除关系和视图、修改关系模式的命令
+2. 交互式数据操纵语言。DML提供增删改查的命令
+3. 事物控制。SQL提供定义事务开始和结束的命令
+4. 嵌入式SQL和动态SQL。
+5. 完整性
+6. 权限管理
+
+### 4.2 SQL数据定义
+
+SQL的数据定义包括对表、视图、索引的创建和删除
+
+1. 创建表
+
+   语句格式：
+
+   ```mysql
+   CREATE TABLE <表名> (<列名><数据类型>[列级完整性约束条件]
+                     [,<列名><数据类型>[列级完整约束条件]]...);
+   ```
+
+   列级完整性约束条件有NULL和UNIQUE（取值唯一），如NOT NULL UNIQUE表示取值唯一，不能取空值。
+
+   说明：
+
+   - PRIMARY KEY()表示定义主码，所以该列定义语句中可以省略NOT NULL UNIQUE
+   - FOREIGN KEY()表示定义外码
+
+2. 修改和删除表
+
+   修改：
+
+   ```mysql 
+   ALTER TABLE <表名>[ADD <新列名> <数据类型> [完整性约束条件]]        增加新列
+   ALTER TABLE <表名>[DROP <完整性约束名>]                                                  删除列
+   ALTER TABLE <表名>[MODIFY <列名><数据类型>]　　　　　　　　　修改列名或列的数据类型
+   ```
+
+   删除表：
+
+   ```mysql 
+   DROP TABLE <表名>
+   ```
+
+3. 索引建立与删除
+
+   数据库中的索引是某个表中一列或者若干列值的集合和相应的指向表中物理标识这些值的数据页的逻辑指针清单。
+
+   索引分为**聚集索引**和**非聚集索引**。聚集索引是指索引表中索引项的顺序与表中记录的物理顺序一致的索引
+
+   - 建立索引
+
+     ```mysql
+     CREATE [UNIQUE][CLUSTER] INDEX <索引名> 
+     ON <表名>(<列名>[<次序>][,<列名>][<次序>]]...);
+     ```
+
+     说明：
+
+     次序：可选ASC(升序)或DESC(降序)，默认值为ASC。
+
+     CLUSTER：表明要建立的索引是聚簇索引，意味索引项的顺序是与表中记录的物理顺序一致的索引组织
+
+   - 删除索引
+
+     ```mysql
+     DROP INDEX <索引名>
+     ```
+
+4. 视图的创建和删除
+
+   视图不是真实存在的基本表，而是一个虚拟表
+
+   - 视图的创建
+
+     ```mysql
+     CREATE VIEW 视图名 (列表名)
+     AS SELECT 查询子句
+     [WITH CHECK OPTION];
+     ```
+
+     说明：
+
+     子查询可以是任意复杂的SELECT语句，但通常不允许含有ORDER BY子句和DISTINCT短语。
+
+   - 视图的删除
+
+     ```mysql
+     DROP VIEW 视图名
+     ```
+
+### 4.3 SQL数据查询
+
+SQL的数据操纵功能包括SELECT, INSERT, DELETE, UPDATE这四条语句。
+
+1. SELECT基本结构
+
+   SQL查询中的子句顺序为SELECT、FROM、WHERE、GROUP BY、HAVING 和 ORDER BY。
+
+2. 简单查询
+
+   只包含SELECT <列名> FROM <表名> WHERE 条件
+
+3. 连接查询
+
+   例如
+
+   ```mysql
+   SELECT Sno,Sname
+   FROM S,SC
+   WHERE S.Sno=SC.Sno AND SC.Cno='C1';
+   ```
+
+4. 子查询与聚集函数
+
+   - 子查询
+
+     子查询也称嵌套查询。嵌套查询是指一个 SELECT-FROM-WHERE查询块中可以嵌入另一个查询块中
+
+   - 聚集函数
+
+     聚集函数以一个值的集合为输入，返回单个值的函数。SQL中提供了５个预定义聚集函数；平均值AVG、最小值MIN、最大值MAX、求和SUM、以及计数COUNT
+
+     例如
+
+     ```mysql
+     SELECT Sname,Age 
+     FROM S
+     WHERE Age < (SELECT MIN(Age)
+                 FROM S
+                 WHERE SD='CS')
+                 AND SD <>'CS';
+     ```
+
+5. 分组查询
+
+   - GROUP BY子句
+
+   ```mysql
+   SELECT Sno,AVG(grade)
+   FROM SC
+   GROUP BY Sno;
+   ```
+
+   - HAVING子句
+
+6. 更名运算
+
+   Old-name AS new-name
+
+   AS 子句既可出现在SELECT子句中，也可以出现在FROM子句中
+
+   例如
+
+   ```mysql
+   SELECT Sname AS 姓名, Age AS 年龄
+   FROM S
+   WHERE Age < 18;
+   ```
+
+7. 字符串操作
+
+   对于字符串进行的最常用的操作就是使用操作符LIKE的模式匹配。
+
+   "%"匹配任意字符串，"_"匹配任意一个字符，模式是大小写敏感的。
+
+   SQL中允许使用ESCAPE关键词来定义转义符，例如
+
+   LIKE 'ab\%cd%' ESCAPE '\'，匹配所有以ab%cd开头的字符串
+
+8. 视图查询
+
+   例如查询视图CS-STUDENT
+
+   ``SELECT Sno,Age FROM CS-STUDENT WHERE SD='CS' AND Age < 20;``
+
+### 4.4 SQL数据更新
+
+1. 插入。可以指定被插入的元组，或者用查询语句选出一批待插入的元组
+
+2. 删除。``DELECT FROM 基本表名 [WHERE 条件表达式]``
+
+3. 修改。
+
+   ```mysql
+   UPDATE 基本表名 
+   SET 列名=值表达式
+   [WHERE 条件表达式]
+   ```
+
+### 4.5 SQL访问控制
+
+SQL标准包括DELETE、INSERT、SELECT 和 UPDATE权限。SELECT权限对应于READ权限，SQL还包括了REFERENCES权限，用来限制用户在创建关系时定义外码的能力。
+
+1. 授权的语句格式
+
+   ``GRANT <权限>[,<权限>] .. [ON <对象类型><对象名>] TO <用户>[,<用户>]``
+
+   PUBLIC:接受权限的用户可以是的那个或多个具体的用户，PUBLIC参数可将全向赋给所有用户
+
+   WITH GRANT OPTION:　若指定了此子句，那么获得了权限的用户还可以将权限赋给其他用户。
+
+2. 收回权限
+
+   ````REVOKE <权限>[,<权限>] .. [ON <对象类型><对象名>] FORM <用户>[,<用户>]````
+### 4.6  嵌入式SQL
+
+   共享变量也叫主变量。例如，根据共享变量givensno的值查询
+
+```mysql
+EXEC SQL SELECT sname,age,sex
+INTO :Msname,:Mage,:Msex
+FROM students
+WHERE sno=:givensno;
+```
+
+
+
+## 5. 数据库的控制功能
+
+### 5.1 事务管理
+
+事务定义的语句有三条
+
+1. BEGIN TRANSACTION: 事务开始
+2. COMMIT:事务提交
+3. ROLLBACK: 事务回滚
+
+事务的性质
+
+1. 原子性
+2. 一致性
+3. 隔离性
+4. 持久性
+
+### 5.2 数据库的备份与恢复
+
+### 5.3 并发控制
+
+并发操作带来的问题是数据的不一致性，主要有三类：丢失更新、不可重复读和读脏数据
+
+1. 并发带来的问题
+
+   - 丢失更新：多个事务都读取一个数据去修改，这样全部数据执行完之后，其实只有最后一个事务的的数据修改成功了，因为之前事务提前提交之后的数据被后来提交的数据覆盖了。
+   - 不可重复读。同一事物内对同一组数据的相同运算结果不同。
+   - 读脏数据。一个事务T读取并修改了一个数据，另一个事务P此时读取了这个数据，但是T突然回滚了事务，那么P读取到的这个数据就是脏数据。
+
+2. 并发控制技术
+
+   并发控制的主要技术是封锁。基本的封锁类型有排它锁（简称X锁或写锁）和共享锁（简称S锁或读锁）
+
+   - 排它锁。若事务T对数据对象A加上X锁，则只允许T读取和修改A，其他事务都不能再对A加任何类型的锁，知道T释放A上的锁
+   - 共享锁。若事务T对数据对象A加上S锁，则只允许T读取A，但不能修改，其他事务只能再对A加S锁，知道T释放Ａ上的Ｓ锁。这就保证了其他事务可以读Ａ，但在Ｔ释放Ａ上的Ｓ锁之前不能丢数据做修改
+
+   三级封锁协议
+
+   - 一级封锁协议。事务在修改数据Ｒ之前必须对其加Ｘ锁，知道事务结束才释放。**一级封锁协议可以解决丢失更新问题**
+   - 二级封锁协议。在一级封锁协议的基础上，加上事务Ｔ在读数据Ｒ之前必须对其加Ｓ锁，读完后才可释放Ｓ锁。**二级封锁协议可以解决读脏数据问题，但是不能保证可重复读**
+   - 三级封锁协议。在一级封锁协议的基础上，加上事务Ｔ在读数据Ｒ之前，必须保证先加Ｓ锁，知道事务结束才释放，**三级封锁协议除了防止丢失修改和不读“脏数据”外，还进一步防止了不可重复读**
+
+3. 活锁和死锁
+
+   由于其他事务封锁了数据Ｒ，所以事务T一直处于等待状态，这叫活锁
+
+   由于多个事务分别请求封锁对方已经封锁的数据，导致了长期等待而无法继续下去的现象。
+
+4. 两段封锁协议
+
+   是指所有事务必须分两个阶段对数据项加锁和解锁。第一阶段封锁，可以获得数据上的任何类型的锁，但不能释放。第二阶段释放封锁，事务可以释放任何数据上的任何类型的锁，但不能申请。
