修改一些格式

--- a/Java/JavaSE1/时间相关的类.md
+++ b/Java/JavaSE1/时间相关的类.md
@@ -7,17 +7,17 @@ java.util.Date
   
   产生的date结果形式为：Fri Nov 22 16:28:48 CST 2019
   
-  - Date()              该构造器创建出来的对象默认表示当前的系统时间
-     `Date date = new Date()`
-  - Date(long time)     创建一个Date对象描述给定毫秒值所表示的时间
-     `Date date = new Date(System.currentTimeMillis())`
+  | 方法            | 描述                                         |
+  | --------------- | -------------------------------------------- |
+  | Date()          | 该构造器创建出来的对象默认表示当前的系统时间 |
+  | Date(long time) | 创建一个Date对象描述给定毫秒值所表示的时间   |
   
 - 方法
   
-   - long getTime(long time)      获取Date描述的时间距离1970年元旦的毫秒差
-     `date.getTime(time)`
-   - void setTime()           使当前Date对象表示给定的毫秒值所描述的时间
-     `date.setTime()`     打印date结果形式为：Sat Nov 23 16:36:13 CST 2019
+   | 方法                    | 描述                                       |
+   | ----------------------- | ------------------------------------------ |
+   | long getTime()          | 获取Date描述的时间距离1970年元旦的毫秒差   |
+   | void setTime(long time) | 使当前Date对象表示给定的毫秒值所描述的时间 |
 ### 2. SimpleDateFormat类
 使用一个特殊的字符串来描述一个时间格式，并使用该时间格式作为桥梁，在字符串和时间之间相互转换
 Date<->String
@@ -64,26 +64,15 @@ DateFormat df = DateFormat.getInstance(style, cLocal);
 `Calendar calendar = Calendar.getInstance();`
 
 #### 4.1 方法
-1. Date getTime();  
-       得到一个Date对象
-2. void setTime(Date date);
-       将当前的Calendar对象的时间设置为给定的时间
-3. int get(int field)
-   field对应Calendar这个类中若干常量，每个常量表示一个不同的时间单位
-例如：
-   Calendar.YEAR,Calendar.MONTH
-   Calendar.DATE(号数)等效于Calendar.DAY_OF_MONTH
-4. void set(int field, int value)
-      设置当前Calendar指定时间分量的值
-   filed:时间分量
-   value:要设置的值
-   > 例如：将时间设置到2008年
-   > calendar.set(Calendar.YEAR, 2008);
-5. void add(int field, int value)
-      将给定的时间分量累加给定的值
-   > 例如：5天后的日期
-   > calendar.add(Calendar.DAY_OF_MONTH, 5);
-   
+
+| 方法                           | 描述                                                         |
+| ------------------------------ | ------------------------------------------------------------ |
+| Date getTime()                 | 得到一个Date对象                                             |
+| void setTime(Date date)        | 将当前的Calendar对象的时间设置为给定的时间                   |
+| int get(int field)             | field对应Calendar这个类中若干常量，每个常量表示一个不同的时间单位<br />例如：<br/>Calendar.YEAR,Calendar.MONTH<br/>Calendar.DATE(号数)等效于Calendar.DAY_OF_MONTH |
+| void set(int field, int value) | 设置当前Calendar指定时间分量的值<br/>filed:时间分量<br/>value:要设置的值<br />例如：将时间设置到2008年<br/>calendar.set(Calendar.YEAR, 2008); |
+| void add(int field, int value) | 将给定的时间分量累加给定的值<br />例如：5天后的日期<br/>calendar.add(Calendar.DAY_OF_MONTH, 5); |
+
 #### 4.2 String,Date,Calendar转换
 String   -> SimpelDateFormat.parse()  -> Date
 Date     -> Calendar.setTime()        -> Calendar
