--- a/Java/JavaSE1/集合.md
+++ b/Java/JavaSE1/集合.md
@@ -12,16 +12,19 @@
 不重复：指的是Set集合中不能出现两个equals()比较为true的元素，数组不属于集合的范畴
 
 #### 1.2 Collection中常用的方法
-   + int size():返回集合中元素的数量
-   + boolean isEmpty():判断集合是否为空
-   + boolean contains(Object o):判断当前集合中是否包含给定的元素
-   + void clear():清空集合
-   + boolean add(E e):向集合中添加元素，添加成功返回true，否则返回false;
-   + boolean remove(Object o):从集合中删除给定的元素，删除成功返回true;
-   + boolean addAll(Collection c):将给定集合中的所有元素添加到当前集合;
-   + boolean removeAll(Collection c):删除当前集合中与给定集合相同的元素;
-   + boolean retainAll(Collection c):只保留当前集合中与给定集合相同的元素;
-   + Iterator iterator():返回用于遍历集合的迭代器
+
+|              方法               |                        描述                        |
+| :-----------------------------: | :------------------------------------------------: |
+|           int size()            |                返回集合中元素的数量                |
+|        boolean isEmpty()        |                  判断集合是否为空                  |
+|   boolean contains(Object o)    |          判断当前集合中是否包含给定的元素          |
+|          void clear()           |                      清空集合                      |
+|        boolean add(E e)         | 向集合中添加元素，添加成功返回true，否则返回false; |
+|    boolean remove(Object o)     |     从集合中删除给定的元素，删除成功返回true;      |
+|  boolean addAll(Collection c)   |       将给定集合中的所有元素添加到当前集合;        |
+| boolean removeAll(Collection c) |        删除当前集合中与给定集合相同的元素;         |
+| boolean retainAll(Collection c) |       只保留当前集合中与给定集合相同的元素;        |
+|       Iterator iterator()       |              返回用于遍历集合的迭代器              |
 
 ### 2. List集合(接口)
 #### 2.1 两个常用的实现类
@@ -30,9 +33,12 @@
    + Vector:不常用
 
 #### 2.2 特有的方法
-   + Object[] toArray()：该方法用于将集合转换为数组
-   + Object get(int index)：获取给定下标的元素
-   + Object set(int index, Object o)：将集合中给定位置的元素替换为给定的元素，返回被替换的元素
+
+| 方法                            | 描述                                                     |
+| ------------------------------- | -------------------------------------------------------- |
+| Object[] toArray()              | 该方法用于将集合转换为数组                               |
+| Object get(int index)           | 获取给定下标的元素                                       |
+| Object set(int index, Object o) | 将集合中给定位置的元素替换为给定的元素，返回被替换的元素 |
 
 ### 3. Set集合
 
@@ -331,5 +337,3 @@ class MyComparator implements<String>{
   	}
   };)
   ```
-
-### 
