整理面向对象笔记

--- a/Java/JavaOOP/字符串相关的类.md
+++ b/Java/JavaOOP/字符串相关的类.md
@@ -1,11 +1,14 @@
-## 1. Object类
+### 1. Object类
+
 Java默认继承Object类，Java类都继承了Object类的属性和方法
 toString()      equals()     hashCode()
 
-### 1.1 toString()
+#### 1.1 toString()
+
 默认返回值为String类型：类名全程@+hashCode()(hashCode值的十六进制的值)
 	
-### 1.2 equals()   ==
+#### 1.2 equals()   ==
+
 在Object类中都是比较引用地址是否相等
 比较两个对象是否相等："引用相等"  "对象相等"
 1. 引用相等：比的是对象的地址，比的是是否为同一个对象
@@ -62,7 +65,8 @@ char[]本身就是一串字符，Java中可以作为字符串。char类型的数
 |   toCharArray()    |            将给定的字符串转换为字符数组             |
 |    getBytest()     |  根据给定的字符集将当前字符串转化为对应的字节序列   |
 
-### 3.4 String总结
+### 4. StringBuilder类
+
 - String = char[] + 操作
       数组是不变的(一旦改变就不是原来的对象)
    StringBuilder = char[] + 操作
