--- a/Java/笔记.md
+++ b/Java/笔记.md
@@ -42,9 +42,7 @@ class Demo3B extends Demo3A {
     也就是一个类中的**静态方法不可以调用非静态方法，但是非静态方法可以调用静态方法。**
     **静态方法不能访问非静态成员（非静态(成员、方法)的访问默认有一个this.，即非静态是与实例相关的），非静态方法可以访问静态成员**
 
-
-
-### 4. 题目
+### 4. static的题目
 
 1. 需求：运行Demo这个类输出的结果是:1,2,3,4。在Xoo类中添加代码实现需求
 
@@ -80,7 +78,13 @@ class Demo3B extends Demo3A {
    }
    ```
 
+### 5. 字符串拼接
 
+例题: `System.out.println(1+2+"hello"+3+4)`的结果是什么
+
+答案是: 3hello34
+
+原因: 一开始的1+2会被当做整数的加法来计算; 加法加完之后变成了3+"hello"+3+4, 这儿牵涉到字符串的拼接问题,先计算3+"hello", 因为字符串本身是不会变的, 如果变了,那就只能是产生了新的字符串, 所以这儿实际是开辟了另一个字符数组空间来存储3+"hello", 那么结果就是"3hello"; 然后又变成了"3hello"+3, 这又是字符串的拼接,结果还是一个字符串, 所以最终的结果是"3hello34"
 
 
 
