增加笔记反射、线程、异常处理、jdk8新特性、IO流

--- a/Java/JavaSE2/异常处理.md
+++ b/Java/JavaSE2/异常处理.md
@@ -50,7 +50,7 @@ StackOverflowError：栈溢出（递归）
 
   + finally永远会被执行，NullPointerException,StringIndexOutOfBoundsException,ArrayIndexOutOfBoudsException。这些异常都属于RuntimeException异常（非检查时异常），该异常又属于Exception。
 
-  + finally会在程序退出try...catch前调用（比如try...catch中有return ，或者throw时，finally会在这些语句块执行之后执行，并不是finally会在try...catch的return前执行，而是等它们先执行完），所以finally中不应该出现return，因为它会覆盖try...catch中的return
+  + finally会在程序退出try...catch前调用（比如try...catch中有return ，或者throw时，finally会在这些语句块前执行），所以finally中不应该出现return，因为它会覆盖try...catch中的return
 
 + catch异常有顺序，异常要从小到大，否则会出现编译错误
 
