增加笔记jdk8新特性

--- a/Java/JavaSE2/异常处理.md
+++ b/Java/JavaSE2/异常处理.md
@@ -40,7 +40,9 @@ StackOverflowError：栈溢出（递归）
   }
   ```
 
-  ​        JVM发现要用null去调用一个方法，JVM就会创建一个空指针异常的实例来描述这里发生的意外情况。在当前行抛出异常后，JVM会检查代码的片段，查看当前代码是否有异常处理机制。当发现代码没有异常处理机制，则将该异常实例抛到当前代码方法之外。当异常逐级抛出main方法之外时，JVM会直接杀掉当前程序，程序退出，异常代码之后的代码就不会在执行。
+  ​        JVM发现要用null去调用一个方法，JVM就会创建一个空指针异常的实例来描述这里发生的意外情况。
+
+  ​         在当前行抛出异常后，JVM会检查代码的片段，查看当前代码是否有异常处理机制。当发现代码没有异常处理机制，则将该异常实例抛到当前代码方法之外。当异常逐级抛出main方法之外时，JVM会直接杀掉当前程序，程序退出，异常代码之后的代码就不会在执行。
 
   ​        异常捕获机制的良好习惯：在最后一个catch捕获Exception，以保证可以捕获程序中出现的其他异常，使得程序不会出现闪退的情况。
 
