整理一些重复的文件

--- a/Java/笔记.md
+++ b/Java/笔记.md
@@ -86,7 +86,47 @@ class Demo3B extends Demo3A {
 
 原因: 一开始的1+2会被当做整数的加法来计算; 加法加完之后变成了3+"hello"+3+4, 这儿牵涉到字符串的拼接问题,先计算3+"hello", 因为字符串本身是不会变的, 如果变了,那就只能是产生了新的字符串, 所以这儿实际是开辟了另一个字符数组空间来存储3+"hello", 那么结果就是"3hello"; 然后又变成了"3hello"+3, 这又是字符串的拼接,结果还是一个字符串, 所以最终的结果是"3hello34"
 
+### 6. += 和=的区别
 
+#### 6.1 当类型一致时
+
+没什么区别（要说区别的话，就是+=的效率要高一点，因为=那个牵扯到一个中间变量，相当于是将a+1之后再赋值给a，但是+=的话就是直接在a的基础上加的）
+
+```java
+int a = 1;
+a += 1;
+a = a + 1;
+```
+
+#### 6.2 当类型不一致时
+
+在下面这个例子中，a是一个short类型，但是字面值1是一个int类型（***注意，在Java中，有小数点的默认为double类型，没小数点的，默认是int类型***），那么这个地方就涉及到一个类型转换问题。因为字面量 1 是 int 类型，它比 short 类型精度要高，因此不能隐式地将 int 类型下转型为 short 类型。
+
+```java
+short a = 1;
+a += 1;  // 可以这样用，这句话等效于 a = (short) (a+1);
+a = a + 1;  // 报错，a+1得到的是一个int类型的值，不能隐式的将int向下转型
+```
+
+### 7. & 和 &&的区别
+
+&&有截断的作用，&没有。另外，&还可以进行按位与运算
+
+`System.out.println(0x13 & 0x0f);`，结果为0x03;即得到低四位的值
+
+### 8. 后++的注意事项
+
+```java
+int a = 2;
+int b = 5;
+if (a++ > 1 && b++ > 6)
+    System.out.println("*****");
+/* 经过上面的计算，最后a==2，b==5，虽然&&截断了后面的判断，但是前面的a++ > 1还是执行了，所以++就可以执行，并不是要括号里的所有语句都执行完之后，再分别执行每个后++*/
+```
+
+### 9. 抽象类不能创建对象，那么为什么抽象类中要有构造方法呢
+
+因为抽象类不能创建对象，只能其子类创建，但是子类在创建对象的时候，调用构造方法时（无论是有参构造器韩式无参构造器），都会默认调用super()，或者有些构造方法会使用super(参数列表)，那么这样的话，如果父类中没有构造方法，编译就会报错。所以***父类的构造器方法是为子类创建对象用的***
 
 
 
