--- a/Java/JavaOOP/包装类.md
+++ b/Java/JavaOOP/包装类.md
@@ -34,8 +34,8 @@ int i2 = i.intValue();
 ```
 
 ### 2. 包装类的自动拆装箱
-int i = Integer.valueOf(1);  // 自动拆箱, 相当于int i = Integer.valueOf(1).intValue();
-Integer j = 1;  // 自动装箱，相当于Integer j = Integer.valueOf(1);
+- int i = Integer.valueOf(1);  // 自动拆箱, 相当于int i = Integer.valueOf(1).intValue();
+- Integer j = 1;  // 自动装箱，相当于Integer j = Integer.valueOf(1);
 
 ### 3. 包装类支持的常量和方法
 - 常量
