--- a/server/Maven/基本概念.md
+++ b/server/Maven/基本概念.md
@@ -53,9 +53,32 @@ export PATH=$MAVEN_HOME/bin:$PATH
 
 #### 3.2 手动创建Maven工程
 
+注意：运行Maven工程时，一定要在工程的pom.xml文件路径下
 
+基本命令
 
+| 命令             | 描述                                |
+| ---------------- | ----------------------------------- |
+| mvn clean        | 清理                                |
+| mvn compile      | 编译主程序(main目录下的)            |
+| mvn test-compile | 编译测试程序(test目录下的)          |
+| mvn test         | 运行测试程序                        |
+| mvn package      | 打包                                |
+| mvn install      | 安装，即将打包后的jar包放到本地仓库 |
 
+#### 3.3 构建过程
+
+1. 清理：将生成的target目录删除
+2. 编译：将java源程序生成class字节码文件
+3. 测试：自动测试，调用junit程序(以XxxTest命名)
+4. 报告：测试程序执行的结果
+5. 打包：Web工程打war包，Java工程打jar包
+6. 安装：Maven项目特有的概念，将jar包复制到"仓库"
+7. 部署：将Web工程生成的war包复制到Tomcat的webapps中
+
+#### 3.4 自动创建Maven工程
+
+使用命令`mvn archetype:generate -DarchetypeCatalog=internal`自动创建工程
 
 
 
