添加基于eclipse的maven操作

--- a/server/Maven/基本概念.md
+++ b/server/Maven/基本概念.md
@@ -80,6 +80,100 @@ export PATH=$MAVEN_HOME/bin:$PATH
 
 使用命令`mvn archetype:generate -DarchetypeCatalog=internal`自动创建工程
 
+### 4. 仓库
+
+#### 4.1 仓库分类
+
+##### 4.1.1 本地仓库
+
+当前系统上部署的仓库目录，为当前系统中的Maven工程服务
+
+##### 4.1.2 远程仓库
+
+1. 中央仓库
+
+   架构在Internet上，为全世界的Maven工程服务，地址:https://repo.maven.apache.org/maven2
+
+2. 中央仓库镜像
+
+   为了分担中央仓库的流量，提升用于访问速度
+
+3. 私服
+
+   搭建在局域网环境中，为局域网范围内的Maven工程服务
+
+#### 4.2 仓库中保存的内容
+
+1. Maven自身所需要的插件
+2. 第三方框架或工具的jar文件
+3. 自己开发的Maven对应的jar文件
+
+#### 4.3 修改本地仓库位置
+
+默认本地仓库位置：~/.m2/repository。
+
+指定本地仓库位置的配置信息文件：/usr/local/maven-3.6.3/conf/settings.xml，在localRepository注释标签下添加
+
+在\<settings>标签中的\<localRepository>标签中指定，如`<localRepository>~/.mvn_repository</localRepository>`，这样以后的本地仓库目录就是~/.repository了，下载的插件和jar包都会在这个目录下。
+
+### 5. 镜像仓库修改
+
+在配置文件中，在\<mirrors>标签内添加以下内容
+
+```xml
+<mirror>
+    <id>nexus-aliyun</id>
+    <mirrorOf>central</mirrorOf>
+    <name>Nexus aliyun</name>
+    <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+</mirror>
+```
+
+### 5. 基于Eclipse操作Maven工程
+
+修改Maven默认的jdk版本
+
+局部：
+
+在工程的pom.xml文件中指定
+
+```xml
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+```
+
+全局：
+
+在maven安装目录下的conf目录下找到settings.xml文件，在\<profiles>标签内添加以下内容
+
+```xml
+<profile>
+    <id>jdk-1.8</id>
+    <activation>
+        <activeByDefault>true</activeByDefault>
+        <jdk>1.8</jdk>
+    </activation>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+    </properties>
+</profile>
+```
+
+
+
 
 
 
