--- a/server/Maven/基本概念.md
+++ b/server/Maven/基本概念.md
@@ -172,9 +172,109 @@ export PATH=$MAVEN_HOME/bin:$PATH
 </profile>
 ```
 
+### 6. Maven项目直接在tomcat中启动
 
+在pom.xml中配置
 
+```xml
+<build>
+	<plugins>
+    	<plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.1</version>
+        </plugin>
+    </plugins>
+</build>
+```
 
+启动命令：`tomcat7:run`
+
+### 7. 补充
+
+1. Maven坐标
+
+   Maven坐标主要组成
+
+   - groupId：组织标识（包名）
+   - artifactId：项目名称（项目名-模块名，例如spring-core，spring-beans等）
+   - version：项目当前的版本
+
+   例如：
+
+   ```xml
+   <dependency>
+       <groupId>org.springframework</groupId>
+       <artifactId>spring-webmvc</artifactId>
+       <version>4.3.18.RELEASE</version>
+   </dependency>
+   ```
+
+   那么jar包的位置为本地仓库中：`org/springframework/spring-webmvc/4.3.18.RELEASE/spring-webmvc-2.3.18.RELEASE.jar`
+
+2. 依赖范围
+
+   依赖范围scope用来控制依赖jar包和编译，测试，运行的classpath的关系，主要取值如下：
+
+   - compiler：默认编译依赖范围，对于编译，测试，运行三种classpath都有效
+
+   - test：测试依赖范围，只对测试classpath有效
+
+     例如：junit
+
+   - provided：已提供依赖范围，对于编译，测试的classpath都有效，但对于运行无效，因为容器已经提供。
+
+   - runtime：运行时提供
+
+     例如：jdbc驱动
+
+   ### 8. 生命周期
+
+   Maven声明周期就是为了对所有的构建过程进行抽象和统一，包括项目清理，初始化，编译，测试，打包，部署等构建过程。
+
+   Maven的三套相互独立的生命周期，分别是：
+
+   1. Clean LifeCycle
+
+      在构建之前进行清理工作
+
+   2. Default LifeCycle
+
+      构建核心部分，编译，测试，打包，部署
+
+   3. Site LifeCycle
+
+      生成项目报告，站点，发布站点
+
+### 9. 聚合和继承
+
+#### 9.1 聚合
+
+一次构建多个项目模块需要对多个项目模块进行聚合。
+
+例如
+
+```xml
+<models>
+	<module>system-entity</module>
+    <module>system-dao</module>
+    <module>system-web</module>
+</models>
+```
+
+#### 9.2 继承
+
+为了消除重复，把相同的配置提取出来。
+
+例如
+
+```xml
+<parent>
+	<groupId>com.xms</groupId>
+    <artifactId>system-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+</parent>
+```
 
 
 
