--- a/server/MyBatis/3. MyBatis动态SQL.md
+++ b/server/MyBatis/3. MyBatis动态SQL.md
@@ -84,8 +84,46 @@
    ```
 
    思考：
-   update emp set salary=88888.88 and bonus=888.88 where empno=1008;
+   实现update emp set salary=88888.88 and bonus=888.88 where empno=1008;
 
+   对于方法中有多个参数这种，一般有两种方法。
+   
+   一种是将定义一个类，属性包含这几个参数，然后传参的时候就直接传该类的对象即可。
+   
+   另一种是定义一个Map，以key-value的方式存储参数，然后传参时就传这个map即可。
+   
+   推荐使用第二种，因为第一种会定义大量的类，项目会变得臃肿。
+   
+   使用Map
+   
+   ```java
+   // 在Dao所在的EmpMapper.java类中定义方法
+   void update(Map map);
+   
+   // 在EmpServiceImpl.java中实现EmpService.java中的方法
+   void updateEmp(Double salary, Double bonus, Integer empno){
+       Map<String, Object> map = new HashMap<>();
+       map.put("salary", salary);
+       map.put("bonus", bonus);
+       map.put("empno", empno);
+       empMapper.update(map);
+   }
+   ```
+   
+   在EmpMapper.xml中实现update emp set salary=88888.88 and bonus=888.88 where empno=1008;
+   
+   ```xml
+   <select id="update" parameterType="java.util.Map">
+   	update emp 
+       <set>
+       	salary=#{salary} and bonus=#{bonus}
+       </set>
+       <where>
+       	empno=#{empno}
+       </where>
+   </select>
+   ```
+   
 5. trim标签主要功能如下：
 
    - 可以在自己包含的内容前加上某些前缀，也可以在其后加上某些后缀，与之对应的属性是
