--- a/server/MyBatis/3.MyBatis动态SQL.md
+++ b/server/MyBatis/3.MyBatis动态SQL.md
@@ -143,8 +143,6 @@
    </trim>
    ```
 
-   
-
 6. foreach标签实现循环逻辑，可以进行一个集合迭代，主要用在构建IN条件中，使用格式如下：
 
    ```xml
@@ -169,5 +167,77 @@
 
    foreach标签它允许指定一个集合，声明集合项和索引变量，变量可以用在标签体内，它允许
    指定开放和关闭的字符串，在迭代项之间放置分隔符
+   
+  7. bind标签可以从OGNL表达式中创建一个变量并将其绑定到上下文，使用格式如下：
+
+     select * from emp where ename like '%三%';		
+
+     select * from emp where ename like concat('%',#{ename},'%');
+     注意：Oracle数据库中concat函数有且仅有2个参数，即需要嵌套调用。
+     concat(concat('%',#{ename}),'%')
+
+     ```xml
+     <select id="" parameterType="Condition">
+         <bind name="name" value="'%'+ename+'%'"/>
+         select * from emp where ename like #{name}
+     </select>	
+     ```
+     
+     
+
+ 补充一：在XML文件中处理特殊符号
+
+- 第一种方式：采用XML转译字符
+
+  | 符号 | 使用  |
+  | ---- | ----- |
+  | <    | \&lt; |
+  |      >|\&gl;       |
+|& |\&amp; |
+  |'|\&apos; |
+  |" |\&quou; |
+  |空格 |\&nbsp;		&nbsp; |
+  
+- 第二种方式：采用\<![CDATA[]]>进行说明，将此内容不进行解析
+
+  ```xml
+  <if test="">
+      and salary <![CDATA[<]]> 50000.0	
+  </if>
+  ```
+
+
+
+补充二： #{}与${}
+
+- 都是取变量的值
+
+- #{}在取值时，sql语句中变量的值会替换成？，${}直接替换成变量的值，因此#{}处理是安全的，即可以防止SQL注入，且是预编译
+
+- ${}方式一般用于传入数据对象，例如：表名，字段名
+
+- 示例
+
+  ```xml
+  select * from emp where empno = #{id}
+  
+  select * from emp where empno = ${id}
+  
+  如果id参数的值是1001，则分别解析为：
+  #{}	->	select * from emp where empno = '1001'
+  
+  ${}	->	select * from emp where empno = 1001
+  
+  "'empno=1001'or'1=1'"
+  
+  #{}	->	"'empno=1001'or'1=1'"			
+  ${}	->	'empno=1001'or'1=1'		
+  
+  order by empno	->
+  #{}	->	order by 'empno'
+  ${}	->	order by empno
+  ```
+
+  ​		
 
 
