update:文件增加编号，便于查看和学习

--- a/database/MySQL/4.DQL(数据查询).md
+++ b/database/MySQL/4.DQL(数据查询).md
@@ -145,7 +145,7 @@ select ename from emp where ename like '%张%';
 # 查询哪些员工有奖金
 select ename,bonus from emp where bonus is not null;
 
-# 查询薪水不在5000到10000之间的员工姓名和薪水
+# 查询薪水不在5000到10000之间的员工姓名和薪水，between...and...是全闭合的。[]
 select ename,salary from emp where salary not between 5000 and 10000;
 
 # 查询不是20号部门和30号部门的员工信息
@@ -216,7 +216,7 @@ select * from emp where deptno not in(20,30);
    | ----------------------------------------- | ------------------------------------------------------------ |
    | length(字符串)                            | 字符串长度。数据库默认使用utf8编码，一个<br />中文占三个字节 |
    | substring(字符串，起始位置，最大字符数量) | 截取字符串，从起始位置开始，最多截取n个字符<br />注意，下标从1开始，不是0。 |
-   | case....whren                             | 分支条件语句<br />语法结构：<br />select 字段名,case 字段<br />when 条件1 then 值1 <br />when 条件2 then 值2<br />else 其他值 end 别名<br />form 表名； |
+   | case....when                              | 分支条件语句<br />语法结构：<br />select 字段名,case 字段<br />when 条件1 then 值1 <br />when 条件2 then 值2<br />else 其他值 end 别名<br />form 表名； |
 
 ```mysql
 select ename,position,salary,
@@ -234,8 +234,8 @@ from emp;
 
 | 函数           | 描述     |
 | -------------- | -------- |
-| count(列明\|*) | 求记录数 |
-| sum(列明)      | 求和     |
+| count(列名\|*) | 求记录数 |
+| sum(列名)      | 求和     |
 | avg(列名)      | 求平均   |
 | max(列名)      | 求最大值 |
 | min(列名)      | 求最小值 |
@@ -316,7 +316,7 @@ values
 | ------ | -------------------- |
 | *      | 0-多个               |
 | +      | 1-多个               |
-| ?      | -或1个               |
+| ?      | 0-或1个              |
 | {n}    | 匹配n个              |
 | {m,n}  | 匹配m到n个           |
 | {m,}   | 不小于指定数量的匹配 |
@@ -343,7 +343,7 @@ values
 
 // 按照部门号升序排序，同一部门按照薪水降序排序，没有部门号的不算在内
 
-` select ename,salary,deptno from emp where deptno is not null order by deptno asc,sa lary desc;`
+` select ename,salary,deptno from emp where deptno is not null order by deptno asc,salary desc;`
 
 还可以写成：` select ename,salary,deptno from emp where deptno is not null order by 1 asc,2 desc;`，这儿的1和2会根据select后面的字段序号来确定
 
