--- a/database/MySQL/案例.md
+++ b/database/MySQL/案例.md
@@ -13,7 +13,9 @@
    group by deptno;
    ```
 
-select之后出现的列，凡是没有被组函数包围的，必须要出现在group by之后，
+**select之后出现的列，凡是没有被组函数包围的，必须要出现在group by之后**，
+
+例如`select ename,max(salary),min(salary) from emp where deptno is not null group by deptno;`这个查询语句就会报错。
 
 3. 按照职位分组，每个职位的最高，最低薪水，人数总和，要求没有职位的不算在内
 
@@ -263,7 +265,7 @@ order by avg(ifnull(salary,0));
 
     部门号等于部门号，薪水等于最高薪水，两者比较规则相同
 
-11. <a id="no-connect-11"></a>>查询哪个部门的人数比30号部门的人多
+11. 查询哪个部门的人数比30号部门的人多
 
     ```mysql
     select deptno,count(*)
@@ -422,40 +424,4 @@ order by avg(ifnull(salary,0));
        where deptno=d.dno
    );
    ```
-
-   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
