--- a/database/Oracle/基础.md
+++ b/database/Oracle/基础.md
@@ -1,100 +1,101 @@
-## Oracle 基础
-####  查看用户
+### 1. Oracle 基础
+
+####  1.1 查看用户
 ​	`show user`
-#### 查看表结构
+#### 1.2 查看表结构
 ​	`desc 表名`
-#### 设置行显示
+#### 1.3 设置行显示
 ​	`set linesize  数值（默认80）`
 ​	当前窗口有效
 
-#### 清屏
+#### 1.4 清屏
 ​	`clear scr`
-#### 查看当前系统时间
+#### 1.5 查看当前系统时间
 ```sql
 select  sysdate  from dual;    -- 02-1月 -20
 ```
-#### 修改日期格式
+#### 1.6 修改日期格式
 ​	当前会话有效
 ```sql
 alter session set nls_date_format='yyyy-mm-dd';
 ```
-#### 查看当前用户下的表
+#### 1.7 查看当前用户下的表
 ```sql
 select table_name from user_tables;
 ```
-### 表结构操作
-#### 	1)创建表
+### 2. 表结构操作
+#### 	2.1 创建表
 ```sql
 create table 表名(
 字段名 类型及长度,
 字段名 类型及长度 default 默认值
 );
 ```
-创建部门表
+例如创建部门表
 ```sql
-create table dept_xu(
+create table dept(
 deptno number(2),
 dname varchar2(10),
 location varchar2(12)
 );
 ```
-#### 	2)修改表结构
+#### 	2.2 修改表结构
 ```sql
 -- 增加
-alter table dept_xu add(des varchar2(10));
+alter table dept add(des varchar2(10));
 -- 修改
 	-- 字段名不能修改
-alter table dept_xu modify(des char(20));
+alter table dept modify(des char(20));
 -- 删除
-alter table dept_xu drop(des);
+alter table dept drop(des);
 ```
-#### 	3)删除表
+#### 	2.3 删除表
 ```sql
 -- 删除表结构
-drop table dept_xu; 
+drop table dept; 
 -- 清空数据
-truncate table dept_xu;
+truncate table dept;
 ```
-### 表数据操作
-#### 	增加数据
+### 3. 表数据操作
+#### 	3.1 增加数据
 ```sql
 	-- 全部字段
-	insert into dept_xu values(10,'研发部','南京');
+	insert into dept values(10,'研发部','南京');
 	-- 部分字段
-	insert into dept_xu(deptno,dname,location) values(20,'行政部','苏州');
+	insert into dept(deptno,dname,location) values(20,'行政部','苏州');
 ```
-#### 	更新数据
+#### 	3.2 更新数据
 ```sql
-update dept_xu set location='上海' where deptno=40;  --带有条件的更新
+update dept set location='上海' where deptno=40;  --带有条件的更新
 ```
-#### 	删除数据
+#### 	3.3 删除数据
 ```sql
-insert into dept_xu(deptno,dname) values(50,'策划部'); -- 插入一条数据
+insert into dept(deptno,dname) values(50,'策划部'); -- 插入一条数据
 -- 删除插入的数据
-delete dept_xu where deptno=50; 
+delete dept where deptno=50; 
 ```
 创建员工表
 ```sql
-create table emp_xu(
-empno number(4),
-ename varchar2(10),
-position varchar2(12),
-salary number(6),
-bonus number(5),
-hiredate date,
-leader number(4),
-deptno number(2)
+create table emp(
+    empno number(4),
+    ename varchar2(10),
+    position varchar2(12),
+    salary number(6),
+    bonus number(5),
+    hiredate date,
+    leader number(4),
+    deptno number(2)
 );
 ```
 查询员工薪水和年薪
 ```sql
-select salary,salary*12  year_salary, ename from emp_xu;
+select salary,salary*12  year_salary, ename from emp;
 ```
 查询员工月薪
 ```sql
 select salary,nvl(salary,0)+nvl(bonus,0)  moth_salary, ename from emp_xu;
 ```
-### 空值问题
+### 4. 空值问题
 ​	1, 空值参与算数运算结果为null
 ​	2, 任何数据类型都可以为空null
 ​	3, 空值和字符数据进行连接操作(||),没有影响
@@ -102,6 +103,7 @@ select salary,nvl(salary,0)+nvl(bonus,0)  moth_salary, ename from emp_xu;
 ​	5,空值判断:
 ​		is null; 为空
 ​		is not null;  不为空
+
 ```sql
 -- 空值处理
 nvl(d1,d2);   --空值处理函数
@@ -121,7 +123,7 @@ select distinct position from emp_xu;
 ​		lower 大写转小写
 ```sql
 -- 查询指定职位的员工信息
-select ename, position from emp_xu where position='Analyst';
+select ename, position from emp where position='Analyst';
 ```
 ### between , in的使用
 ​	between d1 and d2;  d1到d2之间
