增加自动配置桌面快捷方式的方法

--- a/Linux/软件安装/配置应用桌面快捷方式.md
+++ b/Linux/软件安装/配置应用桌面快捷方式.md
@@ -1,3 +1,5 @@
+### 一. 手动配置
+
 1. 假设我的eclipse放在/opt/目录下
 
 ![1575123550588](./img/配置应用快捷方式.png)
@@ -40,3 +42,9 @@
    | Terminal        | 是否使用终端                           |
    | Type            | 启动器类型                             |
    | Categories      | 应用的类型（内容相关）                 |
+
+### 二. 自动配置
+
+注意，以下命令需要在gnome桌面环境下使用，如果报错，可以根据报错信息安装需要的包
+
+使用命令`gnome-desktop-item-edit ~/.local/share/applications –create-new eclipse.desktop`，这条命令会弹出一个窗口，让你选择这个桌面快捷方式的名字，和运行的命令，图标我没有选，它自己默认的就有。如果生成的快捷方式的图标不是你要的，你可以自己去修改`~/.local/share/applications/`目录下的eclipse.desktop，就是你刚刚创建的这个。
